--- a/M03 Assignment/coolstyle.css
+++ b/M03 Assignment/coolstyle.css
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link link rel="stylesheet" type="text/css" href="Downloads/coolstyle.css">
-  <title>M02 Assignment</title>
-</head>
-<body>
-  <h1>cool</h1>
-</body>
-</html>
+body {
+  background-color: lightblue;
+}
+
+h1 {
+  color: navy;
+  margin-left: 20px;
+}
