--- a/M03 Assignment/coolstyle.css
+++ b/M03 Assignment/coolstyle.css
@@ -2,8 +2,11 @@ h1, h2, p {
 padding: 12px;
 line-height: 2em;
 }
-i, a, a:hover, a:visited {
-color: #665544;}
+
+i, a, a:hover, a:visited 
+{
+color: #665544;
+}
 
 body { 
 font-family: Helvetica, Arial, sans-serif;
