--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -1,66 +1,42 @@
-* {
-    font-family: Arial, Verdana, sans-serif;
-    color: #665544;
-    text-align: center;
-}
+	* {
+			font-family: Arial, Verdana, sans-serif;
+			 color: #665544;
+				text-align: center;}
+			body {
+				width: 90%;
+				margin: 0 auto;}
+			#content {
+				overflow: auto;}
+			#nav, #feature, #footer {
+				margin: 1%;}
+			.column1, .column2, .column3 {
+				width: 31.3%;
+				float: left;
+				margin: 1%;}
+			.column 1 {
+            background-color: #dd1bf7;
+            }
+            .column 2 {
+            background-color: #b51bf7;
+            }
 
-body {
-    width: 90%;
-    margin: 0 auto;
-}
-
-#content {
-    overflow: auto;
-}
-
-#nav,
-#footer {
-    margin: 1%;
-    background-color: #3cdde6; /* Change the background color for #nav and #footer */
-    padding: 0.5em 0;
-}
-
-#feature,
-.article {
-    height: 10em;
-    margin-bottom: 1em;
-    background-color: #efefef;
-}
-
-#feature {
-    background-color: #8CC63E;
-    background-image: url("file:///Users/aideng/Downloads/%E2%80%94Pngtree%E2%80%94beautiful%20flower%20sketch_6521818.png");
-    background-size: contain;
-    background-position: right;
-    background-repeat: no-repeat;
-}
-
-.column1,
-.column2,
-.column3 {
-    width: 31.3%;
-    float: left;
-    margin: 1%;
-}
-
-.column1 {
-    background-color: #FFD700; /* Set background color for column1 */
-}
-
-.column2 {
-    background-color: #00BFFF; /* Set background color for column2 */
-}
-
-.column3 {
-    width: 31.3%;
-    float: left;
-    margin: 1%;
-    margin-right: 0%;
-    background-color: #FF6347; /* Set background color for column3 */
-}
-
-li {
-    display: inline;
-    padding: 0.5em;
-}
-
+			.column3 {
+            margin-right: 0%;
+            background-color: #8d1bf7;
+			 }
+			li {
+				display: inline;
+				padding: 0.5em;}
+			#nav, #footer {
+				background-color: #3cdde6;
+				padding: 0.5em 0;}
+			#feature, .article {
+				height: 10em;
+				margin-bottom: 1em;
+				background-color: #efefef;}
+			#feature {
+			 background-color: #8CC63E;
+			 background-image: url("file:///Users/aideng/Downloads/%E2%80%94Pngtree%E2%80%94beautiful%20flower%20sketch_6521818.png");
+			 background-size:contain;
+			 background-position: right;
+			 background-repeat:no-repeat;}
