--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -1,6 +1,6 @@
-	* {
-			font-family: Arial, Verdana, sans-serif;
-			 color: #665544;
+* {
+				font-family: Arial, Verdana, sans-serif;
+				color: #665544;
 				text-align: center;}
 			body {
 				width: 90%;
@@ -13,30 +13,15 @@
 				width: 31.3%;
 				float: left;
 				margin: 1%;}
-			.column 1 {
-            background-color: #dd1bf7;
-            }
-            .column 2 {
-            background-color: #b51bf7;
-            }
-
 			.column3 {
-            margin-right: 0%;
-            background-color: #8d1bf7;
-			 }
+				margin-right: 0%;}
 			li {
 				display: inline;
 				padding: 0.5em;}
 			#nav, #footer {
-				background-color: #3cdde6;
+				background-color: #efefef;
 				padding: 0.5em 0;}
 			#feature, .article {
 				height: 10em;
 				margin-bottom: 1em;
 				background-color: #efefef;}
-			#feature {
-			 background-color: #8CC63E;
-			 background-image: url("file:///Users/aideng/Downloads/%E2%80%94Pngtree%E2%80%94beautiful%20flower%20sketch_6521818.png");
-			 background-size:contain;
-			 background-position: right;
-			 background-repeat:no-repeat;}
