--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -1,6 +1,8 @@
 * {
-    font-family: Arial, Verdana, sans-serif;
-    color: #665544;
+    font-family: 'ChomskyRegular';
+    font-weight: normal;
+    font-style: normal;
+    color: #1bf794;
     text-align: center;
 }
 
