--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -1,8 +1,8 @@
-* {
+header {
     font-family: 'ChomskyRegular';
     font-weight: normal;
     font-style: normal;
-    color: #1bf794;
+    color:  #39FF14;
     text-align: center;
 }
 
