--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -1,9 +1,12 @@
 * {
-    font-family: 'ChomskyRegular';
-    font-weight: normal;
-    font-style: normal;
     color:  #39FF14;
     text-align: center;
+}
+
+h1 {
+   font-family: 'ChomskyRegular';
+   font-weight: normal;
+   font-style: normal;
 }
 
 body {
