--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -3,8 +3,8 @@
     text-align: center;
 }
 
-h1 {
-   font-family: 'ChomskyRegular';
+myheading {
+    font-family: 'GrotesqueBourgeoisieRegular';
    font-weight: normal;
    font-style: normal;
 }
