--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -3,7 +3,7 @@
     text-align: center;
 }
 
-myheading {
+#myheading {
     font-family: 'GrotesqueBourgeoisieRegular';
    font-weight: normal;
    font-style: normal;
