--- a/M04/style/supercoolcss.css
+++ b/M04/style/supercoolcss.css
@@ -4,7 +4,7 @@
 }
 
 #myheading {
-    font-family: 'GrotesqueBourgeoisieRegular';
+    font-family: 'Permanent Marker';
    font-weight: normal;
    font-style: normal;
 }
