--- a/contactus/css/styles.css
+++ b/contactus/css/styles.css
@@ -1,72 +1,233 @@
-* {
-    color:  #39FF14;
-    text-align: center;
-}
-
-h1 {
-    font-family: 'Permanent Marker', Cursive; 
-    font-weight: normal;
-    font-style: normal;
-}
-
 body {
-    background-image: url("https://img.freepik.com/free-vector/flat-design-flower-field-background_52683-126453.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #e5e5e5;
+    color: #3f3f3f;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+a {
+    color: #000088;
+}
+
+a:hover {
+    color: #880000;
+}
+
+#wrap {
+    margin: 40px auto;
+    width: 940px;
+    background: #fff;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+}
+
+#header {
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background: #f9f9f9;
+    padding: 20px 0 40px 0;
+}
+
+#header h1 {
+    margin: 0;
+    padding: 0 0 0 30px;
+    font-weight: bold;
+    color: #3f3f3f;
+    font-size: 38px;
+    line-height: 65px;
+    letter-spacing: -1px;
+}
+
+#header h2 {
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    margin: 0 0 0 20px;
+    padding: 5px 12px;
+    font-weight: normal;
+    color: #171717;
+    font-size: 22px;
+    letter-spacing: -1px;
+    background: #FFEE9F;
+    border: 1px solid #FFE25F;
+    display: inline;
+}
+
+#topmenu {
+    background: #f1f1f1;
+    padding: 10px 20px;
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+}
+
+#topmenu ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+#topmenu li {
+    display: inline;
+    padding: 0 20px 0 0
+}
+
+#topmenu li a {
+    text-decoration: none;
+}
+
+.search {
+    float: right;
+}
+
+#menu {
+    font-size: 14px;
+    float: right;
+    width: 300px;
+    color: #fff;
+    margin: 30px 20px 20px 0;
+}
+
+#menu h3 {
+    font-weight: normal;
+    background: #5f5f5f;
+    color: #fff;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+#menu ul {
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0 10px 10px 10px;
+}
+
+#menu ul li a {
+    color: #12c;
+    text-decoration: none;
+    border-bottom: 1px dotted #12c;
+}
+
+#menu ul li a:hover {
+    color: #c12;
+    border-bottom: 1px dotted #c12;
 }
 
 #content {
-    overflow: auto;
+    float: left;
+    width: 580px;
+    margin: 10px 0 40px 20px;
 }
 
-#nav,
+#content h2 {
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 33px;
+}
+
+#content h3 {
+    font-size: 17px;
+    font-weight: normal;
+}
+
+.cleft {
+    float: left;
+    width: 280px;
+    margin: 10px 0;
+}
+
+.cright {
+    float: right;
+    width: 280px;
+    margin: 10px 0;
+}
+
 #footer {
-    margin: 1%;
-    background-color: #f71b85; 
-    padding: 0.5em 0;
+    -webkit-border-bottom-right-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background: #3f3f3f;
+    color: #fff;
+    padding: 20px;
+    border-top: 1px solid #1f1f1f;
 }
 
-#feature,
-.article {
-    height: 10em;
-    margin-bottom: 1em;
-    background-color: #efefef;
+#footer a {
+    color: #fff;
+    text-decoration: none;
+    border-bottom: 1px dotted #fff;
 }
 
-#feature {
-    background-color: #1bf7da;
-    background-image: url("https://static.vecteezy.com/system/resources/previews/024/400/487/original/rose-with-peony-flower-bouquet-clip-art-element-transparent-background-free-png.png");
-    background-size: contain;
-    background-position: right;
-    background-repeat: no-repeat;
+#footer a:hover {
+    border-bottom: 1px dotted #ccc;
 }
 
-.column1,
-.column2,
-.column3 {
-    width: 31.3%;
+.left {
     float: left;
-    margin: 1%;
 }
 
-.column1 {
-    background-color: #da1bf7; 
+.right {
+    float: right;
 }
 
-.column2 {
-    background-color: #a61bf7; 
+.clear {
+    clear: both;
 }
 
-.column3 {
-    width: 31.3%;
-    float: left;
-    margin: 1%;
-    margin-right: 0%;
-    background-color: #5d1bf7;
+/* Contact Form Styles */
+#contact-form {
+    background: #efefef;
+    padding: 20px;
+    border-radius: 10px;
 }
 
-li {
-    display: inline;
-    padding: 0.5em;
+#contact-form label {
+    font-weight: bold;
+}
+
+#contact-form input[type="text"],
+#contact-form input[type="email"],
+#contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 15px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+#contact-form textarea {
+    height: 150px;
+}
+
+#contact-form input[type="submit"] {
+    background: #5d1bf7;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#thankYou {
+    display: none;
+    background: #efefef;
+    padding: 20px;
+    border-radius: 10px;
 }
